# Sistemas-Distribuidos

./: .gitignore  README.md
TRABALHO 1/: Makefile  README.md  cliente  servidor
TRABALHO 1/Sistema de Votações/: Makefile  admin_client  admin_client.cpp  common.h  multicast_listener  multicast_listener.cpp  server  server.cpp  voter_client  voter_client.cpp  voting.pb.cc  voting.pb.h  voting.proto
TRABALHO 1/include/: funcionario.h  serializer.h  subclasses.h  supermercado.h
TRABALHO 1/src/: cliente.cpp  funcionario.cpp  serializer.cpp  servidor.cpp  subclasses.cpp  supermercado.cpp
Trabalho 2/: Makefile  README.md  cliente_debug  cliente_rmi  cliente_testes  servidor_rmi
Trabalho 2/include/: funcionario.h  remote_service.h  remote_service_impl.h  rmi_core.h  rmi_protocol.h  serializer.h  subclasses.h  supermercado.h
Trabalho 2/src/: cliente_rmi.cpp  cliente_testes.cpp  rmi_core.cpp  serializer.cpp  servidor_rmi.cpp
Trabalho 3/: README.md
lab-calculadora-cpp/: .gitignore  CMakeLists.txt  README.md  RELATÓRIO COMPLETO - LABORATÓRIO DE WEB SERVICES COM C++.docx
lab-calculadora-cpp/public/: index.html
lab-calculadora-cpp/src/: calculadora.cpp  calculadora.h  main.cpp  main_backup.cpp  main_old_problematic.cpp
lab_API_RESTful/HelloAPI/: pom.xml
lab_API_RESTful/HelloAPI/src/main/java/com/exemplo/: HelloResource.java  HelloService.java
lab_Spring_Boot/: README.md
lab_Spring_Boot/demo/src/main/java/com/demo/: Main.java
lab_ws_PHP/: README.md
lab_ws_PHP/cliente-php/: calcular.php  index.php  resultado.php
(+1 files in other folders)
